@@ -1,12 +1,11 @@
 package io.javaoperatorsdk.operator.sample.conditionchecker;
 
+import java.util.Collections;
 import java.util.List;
 
-import io.fabric8.kubernetes.api.model.apps.Deployment;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.javaoperatorsdk.operator.api.reconciler.*;
 import io.javaoperatorsdk.operator.junit.KubernetesClientAware;
-import io.javaoperatorsdk.operator.processing.dependent.waitfor.ConditionChecker;
 import io.javaoperatorsdk.operator.processing.event.source.EventSource;
 
 import static io.javaoperatorsdk.operator.api.reconciler.Constants.NO_FINALIZER;
@@ -18,37 +17,37 @@ public class ConditionCheckerTestReconciler
     KubernetesClientAware {
 
   private KubernetesClient kubernetesClient;
-  private final NginxDeploymentDependentResource nginxDeploymentDependentResource =
-      new NginxDeploymentDependentResource();
+  // private final NginxDeploymentDependentResource nginxDeploymentDependentResource =
+  // new NginxDeploymentDependentResource();
 
   public ConditionCheckerTestReconciler() {}
 
   @Override
   public List<EventSource> prepareEventSources(
       EventSourceContext<ConditionCheckerTestCustomResource> context) {
-    return List.of(nginxDeploymentDependentResource.eventSource(context));
-
+    // return List.of(nginxDeploymentDependentResource.eventSource(context));
+    return Collections.emptyList();
   }
 
   @Override
   public UpdateControl<ConditionCheckerTestCustomResource> reconcile(
       ConditionCheckerTestCustomResource primary, Context context) {
-    nginxDeploymentDependentResource.reconcile(primary, context);
+    // nginxDeploymentDependentResource.reconcile(primary, context);
 
-    ConditionChecker.<Deployment>checker()
-        .withConditionNotFulfilledHandler(() -> {
-          primary.getStatus().setWasNotReadyYet(true);
-          return UpdateControl.updateStatus(primary);
-        })
-        .withCondition(r -> r.getSpec().getReplicas().equals(r.getStatus().getReadyReplicas()))
-        .check(nginxDeploymentDependentResource, primary);
-
-    nginxDeploymentDependentResource.getResource(primary).ifPresentOrElse(
-        d -> primary.getStatus()
-            .setReady(d.getSpec().getReplicas().equals(d.getStatus().getReadyReplicas())),
-        () -> {
-          throw new IllegalStateException("Should not end here");
-        });
+    // ConditionChecker.<Deployment>checker()
+    // .withConditionNotFulfilledHandler(() -> {
+    // primary.getStatus().setWasNotReadyYet(true);
+    // return UpdateControl.updateStatus(primary);
+    // })
+    // .withCondition(r -> r.getSpec().getReplicas().equals(r.getStatus().getReadyReplicas()))
+    // .check(nginxDeploymentDependentResource, primary);
+    //
+    // nginxDeploymentDependentResource.getResource(primary).ifPresentOrElse(
+    // d -> primary.getStatus()
+    // .setReady(d.getSpec().getReplicas().equals(d.getStatus().getReadyReplicas())),
+    // () -> {
+    // throw new IllegalStateException("Should not end here");
+    // });
 
     return UpdateControl.updateStatus(primary);
   }
@@ -56,7 +55,7 @@ public class ConditionCheckerTestReconciler
   @Override
   public void setKubernetesClient(KubernetesClient kubernetesClient) {
     this.kubernetesClient = kubernetesClient;
-    nginxDeploymentDependentResource.setKubernetesClient(kubernetesClient);
+    // nginxDeploymentDependentResource.setKubernetesClient(kubernetesClient);
   }
 
   @Override
